@@ -1,6 +1,12 @@
 # ChangeLog for app-text/lcdf-typetools
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/lcdf-typetools/ChangeLog,v 1.105 2014/03/09 12:10:49 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/lcdf-typetools/ChangeLog,v 1.106 2014/10/10 10:08:06 aballier Exp $
+
+*lcdf-typetools-2.104 (10 Oct 2014)
+
+  10 Oct 2014; Alexis Ballier <aballier@gentoo.org>
+  +lcdf-typetools-2.104.ebuild:
+  version bump
 
 *lcdf-typetools-2.100 (09 Mar 2014)
 
